# tutrle

./: .gitignore  exporte_kategorien_2022.py  exporte_welt_2022.py  gdp_per_capita_welt.py  haus_vom_nikolaus.py  importe_kategorien_2022.py  india.py
gobject/: hello.py
pyqt/: new_password.py
pyside/: new_password.py  rettung.py
pyside/src/: message_controller.py  rettung_app.py
pyside/src/qml/: main.qml
rettung/: Makefile  README.md  org.jbock.rettung.desktop  pyproject.toml
rettung/src/: __main__.py  message_controller.py  rettung_app.py  rettung_controller.py
rettung/src/qml/: Main.qml
